added both brand and category filter in product api
